--- a/assets/cotizaciones.html
+++ b/assets/cotizaciones.html
@@ -62,7 +62,7 @@
         </div>
         <div class="col-md-6">
           <label for="inputCity" class="form-label">Año</label>
-          <input type="text" class="form-control" id="text" required>
+          <input type="number" class="form-control" id="text" required>
         </div>
         <div class="col-md-4">
           <label for="text" class="form-label">Uso</label>
