--- a/index.html
+++ b/index.html
@@ -25,15 +25,16 @@
                   <li class="nav-item">
                     <a class="nav-link h4" href="./assets/qsomos.html">¿Quienes Somos?</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link h4" href="./assets/contacto.html">Contacto</a>
+                  </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle h4" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Seguros
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <li><a class="dropdown-item" href="./assets/seguros.html">Nuestros Seguros</a></li>
-                      <li><a class="dropdown-item" href="./assets/cotizaciones.html">Cotizaciones</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="./assets/contacto.html">Contacto</a></li>
+                      <li><a class="dropdown-item" href="./assets/cotizaciones.html">Cotizaciones</a></li>                    
                     </ul>
                   </li>
                   
